Implementata la funzionalità di modifica email associata all'utente
